# marc2lod

./: .gitignore  2024-01-16_darwinslibrary.csv  2024-01-16_darwinslibrary_v01.parquet  2024-01-16_darwinslibrary_v02.parquet  CITATION.cff  LICENSE  README.md  bdo.py  citator.py  cleaner.py  config.yaml  data.json  download.py  generator.py  main.py  notebook.ipynb  parse.py  pyproject.toml  script.py
data/: sample.xml  sample1.xml  sample2.xml
marc-files/Abercrombie1838wa66W/: Abercrombie1838wa66W_marc.xml
marc-files/Abercrombie1838wa66W_MS/: Abercrombie1838wa66W_MS_marc.xml
marc-files/Agassiz1850up52I/: Agassiz1850up52I_marc.xml
marc-files/Agassiz1850up52I_MS/: Agassiz1850up52I_MS_marc.xml
marc-files/Agassiz2006ft69Y/: Agassiz2006ft69Y_marc.xml
marc-files/Agassiz2006ft69Y_MS/: Agassiz2006ft69Y_MS_marc.xml
marc-files/Barker-Webb1840yf41S/: Barker-Webb1840yf41S_marc.xml
marc-files/Barker-Webb1840yf41S_MS/: Barker-Webb1840yf41S_MS_marc.xml
marc-files/Bechstein1840ob74D/: Bechstein1840ob74D_marc.xml
marc-files/Bechstein1840ob74D_MS/: Bechstein1840ob74D_MS_marc.xml
marc-files/Bell1844nu34M/: Bell1844nu34M_marc.xml
marc-files/Bell1844nu34M_MS/: Bell1844nu34M_MS_marc.xml
marc-files/Bernhardi1834ez86I/: Bernhardi1834ez86I_marc.xml
marc-files/Bernhardi1834ez86I_MS/: Bernhardi1834ez86I_MS_marc.xml
marc-files/Boitard1824jp50S/: Boitard1824jp50S_marc.xml
output/: data.csv  data.json  data.sql  data.ttl  data.xlsx
src/: clean.py  extract.py  load.py  materialize.py  transform.py
tests/: test_extract.py  test_parse.py  test_transform.py
(+256 files in other folders)
